--- a/index.html
+++ b/index.html
@@ -22,6 +22,54 @@
 
     -->
     <script  src="js/index.js"></script>
-    <p>hello world,we are web develobers!</p>
+    <main id="main-doc">
+      <section class = "main-section" id="HTML">
+        <header> HTML </header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section class = "main-section" id="css">
+        <header> css </header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section class = "main-section" id="JavaScript">
+        <header> JavaScript </header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section class = "main-section" id="Pyton">
+        <header> Python </header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section class = "main-section" id="C++">
+        <header> C++ </header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      
+
+    </main>
   </body>
 </html>
