add navbar and css

--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
 
     -->
     <script  src="js/index.js"></script>
+    <nav id="nav-bar">
+      <header> technical documentation for web developer</header>
+      <a class="nav-link" hre="/HTML/"> HTML </a> <br>
+      <a class="nav-link" hre="/CSS/">CSS</a> <br>
+      <a class="nav-link" hre="/JavaScript">JavaScript </a><br>
+      <a class="nav-link" hre="/Python/"> Python</a><br>
+      <a class="nav-link" hre="/C++/">C++ </a>
+    </nav>
+
     <main id="main-doc">
-      <section class = "main-section" id="HTML">
+      <section class = "main-section" id="HTML_for_beginn"
+>
         <header> HTML </header>
         <p></p>
         <p></p>
@@ -32,8 +42,8 @@
           <li></li>
         </ul>
       </section>
-      <section class = "main-section" id="css">
-        <header> css </header>
+      <section class = "main-section" id="CSS">
+        <header> CSS </header>
         <p></p>
         <p></p>
         <code></code>
@@ -69,7 +79,6 @@
         </ul>
       </section>
       
-
     </main>
   </body>
 </html>
