--- a/index.html
+++ b/index.html
@@ -22,24 +22,32 @@
 
     -->
     <script  src="js/index.js"></script>
-    <nav id="nav-bar">
+  <div>
+    <nav id="navbar">
       <header> technical documentation for web developer</header>
-      <a class="nav-link" hre="/HTML/"> HTML </a> <br>
-      <a class="nav-link" hre="/CSS/">CSS</a> <br>
-      <a class="nav-link" hre="/JavaScript">JavaScript </a><br>
-      <a class="nav-link" hre="/Python/"> Python</a><br>
-      <a class="nav-link" hre="/C++/">C++ </a>
+      <ul>
+      <a class="nav-link" href="#HTML"> HTML </a> <br>
+      <a class="nav-link" href="#CSS">CSS</a> <br>
+      <a class="nav-link" href="#JavaScript">JavaScript </a><br>
+      <a class="nav-link" href="#Python"> Python</a><br>
+      <a class="nav-link" href="#C++">C++ </a>
+    </ul>
     </nav>
+  </div>
 
     <main id="main-doc">
-      <section class = "main-section" id="HTML_for_beginn"
->
+      <section class = "main-section" id="HTML">
         <header> HTML </header>
-        <p></p>
-        <p></p>
-        <code></code>
+        <p>
+          HTML, or hypertext markup language, is the language used to write instructions for web
+          browsers to display pages.</p>
+        <p>Tags are the basic building blocks of HTML. Tags describe the function of each piece of
+          content in the document, such as a heading, paragraph or image. </p>
+        <code>
+          "HTML is great"
+        </code>
         <ul>
-          <li></li>
+          <li>You shuld learn HTML as a first step</li>
         </ul>
       </section>
       <section class = "main-section" id="CSS">
@@ -60,7 +68,7 @@
           <li></li>
         </ul>
       </section>
-      <section class = "main-section" id="Pyton">
+      <section class = "main-section" id="Python">
         <header> Python </header>
         <p></p>
         <p></p>
@@ -78,6 +86,8 @@
           <li></li>
         </ul>
       </section>
+      <br>
+      
       
     </main>
   </body>
